deploy/argocd/manifests/applications/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
